package university.jala.legion.sorting;

import university.jala.legion.model.Character;
import java.util.List;

/**
 * Placeholder for the Counting Sort implementation.
 * This class is prepared for future development.
 */
public class CountingSort implements SortingStrategy {

    @Override
    public void sort(List<Character> units) {
        // Implementation for Counting Sort will go here.
        // For now, it does nothing as per the requirements.
    }

    @Override
    public String getName() {
        return "Counting sort";
    }
}