// Placeholder for the Radix Sort algorithm.
package university.jala.legion.sorting;

import university.jala.legion.model.Character;
import java.util.List;

/**
 * Placeholder for the Radix Sort implementation.
 * This class is prepared for future development.
 */
public class RadixSort implements SortingStrategy {

    @Override
    public void sort(List<Character> units) {
        // Implementation for Radix Sort will go here.
        // For now, it does nothing as per the requirements.
    }

    @Override
    public String getName() {
        return "Radix sort";
    }
}